--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
   
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'multiplescrapers', '--trigger-topic=update-db', '--runtime=python38', 'hello_pubsub']
+    args: ['functions', 'deploy', 'multiplescrapers', '--trigger-topic=update-db', '--runtime=python38', '--entry-point=hello_pubsub']
     dir: 'https://source.developers.google.com/projects/scrapingnlp/repos/github_hack-learning_datascience-scrapers/moveable-aliases/main'
