Update schedule Action

--- a/.github/workflows/run_scrapers.yml
+++ b/.github/workflows/run_scrapers.yml
@@ -1,7 +1,7 @@
 name: Daily Scraping
 on:
   schedule:
-    - cron: '5 * * * *'
+    - cron: '21 1 * * *'
 jobs:
   run-scrapers:
     runs-on: ubuntu-latest
