--- a/.github/workflows/run_scrapers.yml
+++ b/.github/workflows/run_scrapers.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup environment
         run: |
-          pip install requirements.txt
+          pip install -r requirements.txt
       - name: Run scrapers
         run: |
           scrapy crawl infoworld
